# pitchiq

./: .dockerignore  .gitignore  Dockerfile  EVALUATION.md  README.md  pyproject.toml  render.yaml
.claude/: launch.json
.github/workflows/: ci.yml
app/: main.py
app/static/report/sample/: evidence.json  report.md
app/templates/: report.html
docs/: blog_kit.md
eval/results/: embeddings.json  generalization.json  grounding.json
notebooks/: 01_data_exploration.ipynb
scripts/: build_index.py  build_recovery_map.py  build_setpiece_report.py  build_shape_report.py  eval_rag.py  generate_report.py  precompute.py  run_eval.py
src/pitchiq/: __init__.py  config.py
src/pitchiq/agent/: graph.py  grounding.py  llm.py  report.py  tools.py
src/pitchiq/data/: loader.py  schema.py
src/pitchiq/data/knowledge/: glossary.yaml
src/pitchiq/eval/: embeddings_compare.py  generalization.py  grounding_check.py
src/pitchiq/metrics/: frames.py  pressing.py  set_pieces.py  spatial.py
src/pitchiq/rag/: eval.py  knowledge.py  retriever.py  store.py
src/pitchiq/viz/: pitch.py  set_pieces.py  shapes.py
tests/: conftest.py  test_app.py  test_eval.py  test_frames.py  test_graph.py  test_grounding.py  test_grounding_preservado.py  test_knowledge.py  test_loader.py  test_pressing.py  test_set_pieces.py  test_spatial.py  test_store.py  test_tools.py
