[project]
name = "pitchiq"
version = "0.1.0"
description = "Análisis táctico de equipo sobre StatsBomb Open Data: métricas computadas, no inventadas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "statsbombpy>=1.14",
    "pandas>=2.0",
    "numpy>=1.26",
    "mplsoccer>=1.4",
    "pydantic>=2.0",
    "scipy>=1.17.1",
    "langgraph>=1.2.7",
    "langchain-core>=1.4.8",
    "anthropic>=0.116.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitchiq"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
markers = [
    "network: tests que descargan datos de StatsBomb (excluidos por defecto)",
]
addopts = "-m 'not network'"
